Add more papers

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: git AT github.com:chenle02/SPDEs-Bib.git
-% Commit: 83560ddc5f9174a10e04670177d0b7fdaa3ed7d9
+% Commit: 0441e15ef401945c0e5e0d5fc2452adbea95a77a
 % Zenodo: https://zenodo.org/records/10143431
 % DOI:    10.5281/zenodo.10143431
 % Date:   2025-05-21
@@ -13780,6 +13780,79 @@
   url		= {https://doi.org/10.1017/CBO9780511549878}
 }
 
+@Article{	  bielecki.chen.ea:19:adaptive,
+  author	= {Bielecki, Tomasz R. and Chen, Tao and Cialenco, Igor and
+		  Cousin, Areski and Jeanblanc, Monique},
+  title		= {Adaptive robust control under model uncertainty},
+  journal	= {SIAM J. Control Optim.},
+  fjournal	= {SIAM Journal on Control and Optimization},
+  volume	= {57},
+  year		= {2019},
+  number	= {2},
+  pages		= {925--946},
+  issn		= {0363-0129,1095-7138},
+  mrclass	= {93E20 (49L20 60J05 62F15 62F25 93E35)},
+  mrnumber	= {3922910},
+  mrreviewer	= {Agn\`es\ Sulem},
+  doi		= {10.1137/17M1137917},
+  url		= {https://doi.org/10.1137/17M1137917}
+}
+
+@Article{	  bielecki.cialenco.ea:14:dynamic,
+  author	= {Bielecki, Tomasz R. and Cialenco, Igor and Zhang, Zhao},
+  title		= {Dynamic coherent acceptability indices and their
+		  applications to finance},
+  journal	= {Math. Finance},
+  fjournal	= {Mathematical Finance. An International Journal of
+		  Mathematics, Statistics and Financial Economics},
+  volume	= {24},
+  year		= {2014},
+  number	= {3},
+  pages		= {411--441},
+  issn		= {0960-1627,1467-9965},
+  mrclass	= {91B30 (91G80)},
+  mrnumber	= {3274935},
+  mrreviewer	= {Lixin\ Song},
+  doi		= {10.1111/j.1467-9965.2012.00524.x},
+  url		= {https://doi.org/10.1111/j.1467-9965.2012.00524.x}
+}
+
+@Article{	  bielecki.cialenco.ea:16:dynamic,
+  author	= {Bielecki, Tomasz R. and Cialenco, Igor and Drapeau, Samuel
+		  and Karliczek, Martin},
+  title		= {Dynamic assessment indices},
+  journal	= {Stochastics},
+  fjournal	= {Stochastics. An International Journal of Probability and
+		  Stochastic Processes},
+  volume	= {88},
+  year		= {2016},
+  number	= {1},
+  pages		= {1--44},
+  issn		= {1744-2508,1744-2516},
+  mrclass	= {91B30 (60G30 62P05 91B06)},
+  mrnumber	= {3450822},
+  doi		= {10.1080/17442508.2015.1026346},
+  url		= {https://doi.org/10.1080/17442508.2015.1026346}
+}
+
+@Article{	  bielecki.cialenco.ea:17:survey,
+  author	= {Bielecki, Tomasz R. and Cialenco, Igor and Pitera,
+		  Marcin},
+  title		= {A survey of time consistency of dynamic risk measures and
+		  dynamic performance measures in discrete time: {LM}-measure
+		  perspective},
+  journal	= {Probab. Uncertain. Quant. Risk},
+  fjournal	= {Probability, Uncertainty and Quantitative Risk},
+  volume	= {2},
+  year		= {2017},
+  pages		= {Paper No. 3, 52},
+  issn		= {2095-9672,2367-0126},
+  mrclass	= {91B30 (60H30 62P05)},
+  mrnumber	= {3625732},
+  doi		= {10.1186/s41546-017-0012-9},
+  url		= {https://doi.org/10.1186/s41546-017-0012-9}
+}
+
 @Article{	  bierme.bonami.ea:12:optimal,
   author	= {Bierm\'{e}, Hermine and Bonami, Aline and Nourdin, Ivan
 		  and Peccati, Giovanni},
@@ -20423,23 +20496,6 @@
 }
 
 @Article{	  bourgain:00:on,
-  author	= {Bourgain, J.},
-  title		= {On diffusion in high-dimensional {H}amiltonian systems and
-		  {PDE}},
-  journal	= {J. Anal. Math.},
-  fjournal	= {Journal d'Analyse Math\'{e}matique},
-  volume	= {80},
-  year		= {2000},
-  pages		= {1--35},
-  issn		= {0021-7670,1565-8538},
-  mrclass	= {35K55 (35B45 35B65 35Q55)},
-  mrnumber	= {1771522},
-  mrreviewer	= {Dario\ Bambusi},
-  doi		= {10.1007/BF02791532},
-  url		= {https://doi.org/10.1007/BF02791532}
-}
-
-@Article{	  bourgain:00:on*1,
   author	= {Bourgain, Jean},
   title		= {On large values estimates for {D}irichlet polynomials and
 		  the density hypothesis for the {R}iemann zeta function},
@@ -20454,6 +20510,23 @@
   mrreviewer	= {D.\ R.\ Heath-Brown},
   doi		= {10.1155/S107379280000009X},
   url		= {https://doi.org/10.1155/S107379280000009X}
+}
+
+@Article{	  bourgain:00:on*1,
+  author	= {Bourgain, J.},
+  title		= {On diffusion in high-dimensional {H}amiltonian systems and
+		  {PDE}},
+  journal	= {J. Anal. Math.},
+  fjournal	= {Journal d'Analyse Math\'{e}matique},
+  volume	= {80},
+  year		= {2000},
+  pages		= {1--35},
+  issn		= {0021-7670,1565-8538},
+  mrclass	= {35K55 (35B45 35B65 35Q55)},
+  mrnumber	= {1771522},
+  mrreviewer	= {Dario\ Bambusi},
+  doi		= {10.1007/BF02791532},
+  url		= {https://doi.org/10.1007/BF02791532}
 }
 
 @InCollection{	  bourgain:00:positive,
@@ -20609,24 +20682,7 @@
   url		= {https://doi.org/10.1007/BF02868469}
 }
 
-@Article{	  bourgain:02:on*3,
-  author	= {Bourgain, Jean},
-  title		= {On random {S}chr\"{o}dinger operators on {$\Bbb Z^2$}},
-  journal	= {Discrete Contin. Dyn. Syst.},
-  fjournal	= {Discrete and Continuous Dynamical Systems. Series A},
-  volume	= {8},
-  year		= {2002},
-  number	= {1},
-  pages		= {1--15},
-  issn		= {1078-0947,1553-5231},
-  mrclass	= {47B80 (35J10 35R60 47A10 47B39 47N55 82B44)},
-  mrnumber	= {1877824},
-  mrreviewer	= {Vadim\ V.\ Kostrykin},
-  doi		= {10.3934/dcds.2002.8.1},
-  url		= {https://doi.org/10.3934/dcds.2002.8.1}
-}
-
-@InCollection{	  bourgain:02:on*4,
+@InCollection{	  bourgain:02:on*3,
   author	= {Bourgain, J.},
   title		= {On the spectrum of lattice {S}chr\"{o}dinger operators
 		  with deterministic potential. {II}},
@@ -20644,7 +20700,7 @@
   url		= {https://doi.org/10.1007/BF02786578}
 }
 
-@Article{	  bourgain:02:on*5,
+@Article{	  bourgain:02:on*4,
   author	= {Bourgain, Jean},
   title		= {On the global {C}auchy problem for the nonlinear
 		  {S}chr\"{o}dinger equation},
@@ -20661,6 +20717,23 @@
   mrreviewer	= {Victor\ V.\ Zharinov},
   doi		= {10.1073/pnas.222494399},
   url		= {https://doi.org/10.1073/pnas.222494399}
+}
+
+@Article{	  bourgain:02:on*5,
+  author	= {Bourgain, Jean},
+  title		= {On random {S}chr\"{o}dinger operators on {$\Bbb Z^2$}},
+  journal	= {Discrete Contin. Dyn. Syst.},
+  fjournal	= {Discrete and Continuous Dynamical Systems. Series A},
+  volume	= {8},
+  year		= {2002},
+  number	= {1},
+  pages		= {1--15},
+  issn		= {1078-0947,1553-5231},
+  mrclass	= {47B80 (35J10 35R60 47A10 47B39 47N55 82B44)},
+  mrnumber	= {1877824},
+  mrreviewer	= {Vadim\ V.\ Kostrykin},
+  doi		= {10.3934/dcds.2002.8.1},
+  url		= {https://doi.org/10.3934/dcds.2002.8.1}
 }
 
 @InCollection{	  bourgain:03:on,
@@ -21842,24 +21915,7 @@
   url		= {https://doi.org/10.1007/978-3-319-09477-9_7}
 }
 
-@Article{	  bourgain:14:on*4,
-  author	= {Bourgain, Jean},
-  title		= {On toral eigenfunctions and the random wave model},
-  journal	= {Israel J. Math.},
-  fjournal	= {Israel Journal of Mathematics},
-  volume	= {201},
-  year		= {2014},
-  number	= {2},
-  pages		= {611--630},
-  issn		= {0021-2172,1565-8511},
-  mrclass	= {60G15 (35J05 35P20)},
-  mrnumber	= {3265298},
-  mrreviewer	= {Isamu\ D\^{o}ku},
-  doi		= {10.1007/s11856-014-1037-z},
-  url		= {https://doi.org/10.1007/s11856-014-1037-z}
-}
-
-@InCollection{	  bourgain:14:on*5,
+@InCollection{	  bourgain:14:on*4,
   author	= {Bourgain, Jean},
   title		= {On the control problem for {S}chr\"{o}dinger operators on
 		  tori},
@@ -21875,6 +21931,23 @@
   mrreviewer	= {G.\ V.\ Rozenblum},
   doi		= {10.1007/978-3-319-09477-9\_8},
   url		= {https://doi.org/10.1007/978-3-319-09477-9_8}
+}
+
+@Article{	  bourgain:14:on*5,
+  author	= {Bourgain, Jean},
+  title		= {On toral eigenfunctions and the random wave model},
+  journal	= {Israel J. Math.},
+  fjournal	= {Israel Journal of Mathematics},
+  volume	= {201},
+  year		= {2014},
+  number	= {2},
+  pages		= {611--630},
+  issn		= {0021-2172,1565-8511},
+  mrclass	= {60G15 (35J05 35P20)},
+  mrnumber	= {3265298},
+  mrreviewer	= {Isamu\ D\^{o}ku},
+  doi		= {10.1007/s11856-014-1037-z},
+  url		= {https://doi.org/10.1007/s11856-014-1037-z}
 }
 
 @InCollection{	  bourgain:14:some,
@@ -23373,7 +23446,22 @@
   url		= {https://doi.org/10.1007/BF02392189}
 }
 
-@Article{	  bourgain:84:on,
+@InProceedings{	  bourgain:84:on,
+  author	= {Bourgain, J.},
+  title		= {On nonisomorphisms of algebras of analytic functions},
+  booktitle	= {Proceedings of the second international conference on
+		  operator algebras, ideals, and their applications in
+		  theoretical physics ({L}eipzig, 1983)},
+  series	= {Teubner-Texte Math.},
+  volume	= {67},
+  pages		= {145--154},
+  publisher	= {Teubner, Leipzig},
+  year		= {1984},
+  mrclass	= {46J15 (32E25)},
+  mrnumber	= {763536}
+}
+
+@Article{	  bourgain:84:on*1,
   author	= {Bourgain, J.},
   title		= {On bases in the disc algebra},
   journal	= {Trans. Amer. Math. Soc.},
@@ -23388,21 +23476,6 @@
   mrreviewer	= {Jacques\ Mayer},
   doi		= {10.2307/1999476},
   url		= {https://doi.org/10.2307/1999476}
-}
-
-@InProceedings{	  bourgain:84:on*1,
-  author	= {Bourgain, J.},
-  title		= {On nonisomorphisms of algebras of analytic functions},
-  booktitle	= {Proceedings of the second international conference on
-		  operator algebras, ideals, and their applications in
-		  theoretical physics ({L}eipzig, 1983)},
-  series	= {Teubner-Texte Math.},
-  volume	= {67},
-  pages		= {145--154},
-  publisher	= {Teubner, Leipzig},
-  year		= {1984},
-  mrclass	= {46J15 (32E25)},
-  mrnumber	= {763536}
 }
 
 @Article{	  bourgain:84:on*2,
@@ -23554,6 +23627,22 @@
 }
 
 @Article{	  bourgain:85:on*1,
+  author	= {Bourgain, Jean},
+  title		= {On finitely generated closed ideals in {$H^infty(D)$}},
+  journal	= {Ann. Inst. Fourier (Grenoble)},
+  fjournal	= {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
+  volume	= {35},
+  year		= {1985},
+  number	= {4},
+  pages		= {163--174},
+  issn		= {0373-0956,1777-5310},
+  mrclass	= {46J15 (30H05 46J20)},
+  mrnumber	= {812323},
+  mrreviewer	= {Richard\ Rochberg},
+  url		= {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
+}
+
+@Article{	  bourgain:85:on*2,
   author	= {Bourgain, J.},
   title		= {On square functions on the trigonometric system},
   journal	= {Bull. Soc. Math. Belg. S\'{e}r. B},
@@ -23569,7 +23658,7 @@
   mrreviewer	= {Jos\'{e}\ L.\ Rubio de Francia}
 }
 
-@Article{	  bourgain:85:on*2,
+@Article{	  bourgain:85:on*3,
   author	= {Bourgain, J.},
   title		= {On {L}ipschitz embedding of finite metric spaces in
 		  {H}ilbert space},
@@ -23585,22 +23674,6 @@
   mrreviewer	= {Michel\ Deza},
   doi		= {10.1007/BF02776078},
   url		= {https://doi.org/10.1007/BF02776078}
-}
-
-@Article{	  bourgain:85:on*3,
-  author	= {Bourgain, Jean},
-  title		= {On finitely generated closed ideals in {$H^infty(D)$}},
-  journal	= {Ann. Inst. Fourier (Grenoble)},
-  fjournal	= {Universit\'{e} de Grenoble. Annales de l'Institut Fourier},
-  volume	= {35},
-  year		= {1985},
-  number	= {4},
-  pages		= {163--174},
-  issn		= {0373-0956,1777-5310},
-  mrclass	= {46J15 (30H05 46J20)},
-  mrnumber	= {812323},
-  mrreviewer	= {Richard\ Rochberg},
-  url		= {http://www.numdam.org/item?id=AIF_1985__35_4_163_0}
 }
 
 @Article{	  bourgain:85:sidon,
@@ -23621,22 +23694,6 @@
 
 @InCollection{	  bourgain:85:some,
   author	= {Bourgain, J.},
-  title		= {Some results on the bidisc algebra},
-  note		= {Colloquium in honor of Laurent Schwartz, Vol. 1
-		  (Palaiseau,~1983)},
-  journal	= {Ast\'{e}risque},
-  fjournal	= {Ast\'{e}risque},
-  number	= {131},
-  year		= {1985},
-  pages		= {279--298},
-  issn		= {0303-1179,2492-5926},
-  mrclass	= {46J15 (32E25)},
-  mrnumber	= {816752},
-  mrreviewer	= {S.\ V.\ Kislyakov}
-}
-
-@InCollection{	  bourgain:85:some*1,
-  author	= {Bourgain, J.},
   title		= {Some remarks on the {B}anach space structure of the
 		  ball-algebras},
   booktitle	= {Banach spaces ({C}olumbia, {M}o., 1984)},
@@ -23651,6 +23708,22 @@
   mrreviewer	= {P.\ Wojtaszczyk},
   doi		= {10.1007/BFb0074686},
   url		= {https://doi.org/10.1007/BFb0074686}
+}
+
+@InCollection{	  bourgain:85:some*1,
+  author	= {Bourgain, J.},
+  title		= {Some results on the bidisc algebra},
+  note		= {Colloquium in honor of Laurent Schwartz, Vol. 1
+		  (Palaiseau,~1983)},
+  journal	= {Ast\'{e}risque},
+  fjournal	= {Ast\'{e}risque},
+  number	= {131},
+  year		= {1985},
+  pages		= {279--298},
+  issn		= {0303-1179,2492-5926},
+  mrclass	= {46J15 (32E25)},
+  mrnumber	= {816752},
+  mrreviewer	= {S.\ V.\ Kislyakov}
 }
 
 @InCollection{	  bourgain:85:subspaces,
@@ -24478,25 +24551,7 @@
   url		= {https://doi.org/10.1007/BFb0089219}
 }
 
-@InCollection{	  bourgain:91:on*1,
-  author	= {Bourgain, Jean},
-  title		= {On the restriction and multiplier problems in {${\bf
-		  R}^3$}},
-  booktitle	= {Geometric aspects of functional analysis (1989--90)},
-  series	= {Lecture Notes in Math.},
-  volume	= {1469},
-  pages		= {179--191},
-  publisher	= {Springer, Berlin},
-  year		= {1991},
-  isbn		= {3-540-54024-5},
-  mrclass	= {42B15 (42B25 46E30)},
-  mrnumber	= {1122623},
-  mrreviewer	= {Peter\ I.\ Lizorkin},
-  doi		= {10.1007/BFb0089225},
-  url		= {https://doi.org/10.1007/BFb0089225}
-}
-
-@Article{	  bourgain:91:on*2,
+@Article{	  bourgain:91:on*1,
   author	= {Bourgain, J.},
   title		= {On the {B}usemann-{P}etty problem for perturbations of the
 		  ball},
@@ -24512,6 +24567,24 @@
   mrreviewer	= {W.\ J.\ Firey},
   doi		= {10.1007/BF01895416},
   url		= {https://doi.org/10.1007/BF01895416}
+}
+
+@InCollection{	  bourgain:91:on*2,
+  author	= {Bourgain, Jean},
+  title		= {On the restriction and multiplier problems in {${\bf
+		  R}^3$}},
+  booktitle	= {Geometric aspects of functional analysis (1989--90)},
+  series	= {Lecture Notes in Math.},
+  volume	= {1469},
+  pages		= {179--191},
+  publisher	= {Springer, Berlin},
+  year		= {1991},
+  isbn		= {3-540-54024-5},
+  mrclass	= {42B15 (42B25 46E30)},
+  mrnumber	= {1122623},
+  mrreviewer	= {Peter\ I.\ Lizorkin},
+  doi		= {10.1007/BFb0089225},
+  url		= {https://doi.org/10.1007/BFb0089225}
 }
 
 @InCollection{	  bourgain:91:remarks,
@@ -36994,6 +37067,97 @@
   mrreviewer	= {E. H. Lee}
 }
 
+@Article{	  cialenco.delgado-vences.ea:20:drift,
+  author	= {Cialenco, Igor and Delgado-Vences, Francisco and Kim,
+		  Hyun-Jung},
+  title		= {Drift estimation for discretely sampled {SPDE}s},
+  journal	= {Stoch. Partial Differ. Equ. Anal. Comput.},
+  fjournal	= {Stochastic Partial Differential Equations. Analysis and
+		  Computations},
+  volume	= {8},
+  year		= {2020},
+  number	= {4},
+  pages		= {895--920},
+  issn		= {2194-0401,2194-041X},
+  mrclass	= {60H15 (62M99 65L09)},
+  mrnumber	= {4174073},
+  mrreviewer	= {Mounir\ Zili},
+  doi		= {10.1007/s40072-019-00164-4},
+  url		= {https://doi.org/10.1007/s40072-019-00164-4}
+}
+
+@Article{	  cialenco.fasshauer.ea:12:approximation,
+  author	= {Cialenco, Igor and Fasshauer, Gregory E. and Ye, Qi},
+  title		= {Approximation of stochastic partial differential equations
+		  by a kernel-based collocation method},
+  journal	= {Int. J. Comput. Math.},
+  fjournal	= {International Journal of Computer Mathematics},
+  volume	= {89},
+  year		= {2012},
+  number	= {18},
+  pages		= {2543--2561},
+  issn		= {0020-7160,1029-0265},
+  mrclass	= {60H15 (46E22 60G15 65M70 65M75)},
+  mrnumber	= {3004665},
+  mrreviewer	= {Dirk\ Bl\"omker},
+  doi		= {10.1080/00207160.2012.688111},
+  url		= {https://doi.org/10.1080/00207160.2012.688111}
+}
+
+@Article{	  cialenco.glatt-holtz:11:parameter,
+  author	= {Cialenco, Igor and Glatt-Holtz, Nathan},
+  title		= {Parameter estimation for the stochastically perturbed
+		  {N}avier-{S}tokes equations},
+  journal	= {Stochastic Process. Appl.},
+  fjournal	= {Stochastic Processes and their Applications},
+  volume	= {121},
+  year		= {2011},
+  number	= {4},
+  pages		= {701--724},
+  issn		= {0304-4149,1879-209X},
+  mrclass	= {60H15 (35Q30 35R60 62F10 65M32 65M75 76D05 76M35)},
+  mrnumber	= {2770904},
+  mrreviewer	= {Luigi\ Manca},
+  doi		= {10.1016/j.spa.2010.12.007},
+  url		= {https://doi.org/10.1016/j.spa.2010.12.007}
+}
+
+@Article{	  cialenco.huang:20:note,
+  author	= {Cialenco, Igor and Huang, Yicong},
+  title		= {A note on parameter estimation for discretely sampled
+		  {SPDE}s},
+  journal	= {Stoch. Dyn.},
+  fjournal	= {Stochastics and Dynamics},
+  volume	= {20},
+  year		= {2020},
+  number	= {3},
+  pages		= {2050016, 28},
+  issn		= {0219-4937,1793-6799},
+  mrclass	= {60H15 (35Q30 35R60 62F10 65M32)},
+  mrnumber	= {4101083},
+  doi		= {10.1142/S0219493720500161},
+  url		= {https://doi.org/10.1142/S0219493720500161}
+}
+
+@Article{	  cialenco.lototsky.ea:09:asymptotic,
+  author	= {Cialenco, Igor and Lototsky, Sergey V. and Posp\'i\v sil,
+		  Jan},
+  title		= {Asymptotic properties of the maximum likelihood estimator
+		  for stochastic parabolic equations with additive fractional
+		  {B}rownian motion},
+  journal	= {Stoch. Dyn.},
+  fjournal	= {Stochastics and Dynamics},
+  volume	= {9},
+  year		= {2009},
+  number	= {2},
+  pages		= {169--185},
+  issn		= {0219-4937,1793-6799},
+  mrclass	= {60H15 (60G15 60G18 62F12)},
+  mrnumber	= {2531625},
+  doi		= {10.1142/S0219493709002610},
+  url		= {https://doi.org/10.1142/S0219493709002610}
+}
+
 @Article{	  cialenco.xu:15:hypothesis,
   author	= {Cialenco, Igor and Xu, Liaosha},
   title		= {Hypothesis testing for stochastic {PDE}s driven by
@@ -37010,6 +37174,25 @@
   mrreviewer	= {Le\ Chen},
   doi		= {10.1016/j.spa.2014.09.022},
   url		= {https://doi.org/10.1016/j.spa.2014.09.022}
+}
+
+@Article{	  cialenco:18:statistical,
+  author	= {Cialenco, Igor},
+  title		= {Statistical inference for {SPDE}s: an overview},
+  journal	= {Stat. Inference Stoch. Process.},
+  fjournal	= {Statistical Inference for Stochastic Processes. An
+		  International Journal Devoted to Time Series Analysis and
+		  the Statistics of Continuous Time Processes and Dynamical
+		  Systems},
+  volume	= {21},
+  year		= {2018},
+  number	= {2},
+  pages		= {309--329},
+  issn		= {1387-0874,1572-9311},
+  mrclass	= {60H15 (62M99 65M75)},
+  mrnumber	= {3824970},
+  doi		= {10.1007/s11203-018-9177-9},
+  url		= {https://doi.org/10.1007/s11203-018-9177-9}
 }
 
 @Article{	  cianchi.mazya:08:neumann,
@@ -43873,25 +44056,6 @@
   author	= {Dawson, Donald A. and Etheridge, Alison M. and
 		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
 		  and Xiong, Jie},
-  title		= {Mutually catalytic branching in the plane: infinite
-		  measure states},
-  journal	= {Electron. J. Probab.},
-  fjournal	= {Electronic Journal of Probability},
-  volume	= {7},
-  year		= {2002},
-  pages		= {No. 15, 61},
-  issn		= {1083-6489},
-  mrclass	= {60K35 (60G57 60J80)},
-  mrnumber	= {1921744},
-  mrreviewer	= {Achim Klenke},
-  doi		= {10.1214/EJP.v7-114},
-  url		= {https://doi.org/10.1214/EJP.v7-114}
-}
-
-@Article{	  dawson.etheridge.ea:02:mutually*1,
-  author	= {Dawson, Donald A. and Etheridge, Alison M. and
-		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
-		  and Xiong, Jie},
   title		= {Mutually catalytic branching in the plane: finite measure
 		  states},
   journal	= {Ann. Probab.},
@@ -43906,6 +44070,25 @@
   mrreviewer	= {Roger Tribe},
   doi		= {10.1214/aop/1039548370},
   url		= {https://doi.org/10.1214/aop/1039548370}
+}
+
+@Article{	  dawson.etheridge.ea:02:mutually*1,
+  author	= {Dawson, Donald A. and Etheridge, Alison M. and
+		  Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A.
+		  and Xiong, Jie},
+  title		= {Mutually catalytic branching in the plane: infinite
+		  measure states},
+  journal	= {Electron. J. Probab.},
+  fjournal	= {Electronic Journal of Probability},
+  volume	= {7},
+  year		= {2002},
+  pages		= {No. 15, 61},
+  issn		= {1083-6489},
+  mrclass	= {60K35 (60G57 60J80)},
+  mrnumber	= {1921744},
+  mrreviewer	= {Achim Klenke},
+  doi		= {10.1214/EJP.v7-114},
+  url		= {https://doi.org/10.1214/EJP.v7-114}
 }
 
 @Article{	  dawson.feng:01:large,
@@ -59058,23 +59241,6 @@
 @Article{	  fujita:90:integrodifferential,
   author	= {Fujita, Yasuhiro},
   title		= {Integrodifferential equation which interpolates the heat
-		  equation and the wave equation. {II}},
-  journal	= {Osaka J. Math.},
-  fjournal	= {Osaka Journal of Mathematics},
-  volume	= {27},
-  year		= {1990},
-  number	= {4},
-  pages		= {797--804},
-  issn		= {0030-6126},
-  mrclass	= {45K05},
-  mrnumber	= {1088183},
-  mrreviewer	= {Hana Petzeltov\'{a}},
-  url		= {http://projecteuclid.org/euclid.ojm/1200782677}
-}
-
-@Article{	  fujita:90:integrodifferential*1,
-  author	= {Fujita, Yasuhiro},
-  title		= {Integrodifferential equation which interpolates the heat
 		  equation and the wave equation},
   journal	= {Osaka J. Math.},
   fjournal	= {Osaka Journal of Mathematics},
@@ -59087,6 +59253,23 @@
   mrnumber	= {1066629},
   mrreviewer	= {O. Diekmann},
   url		= {http://projecteuclid.org/euclid.ojm/1200782311}
+}
+
+@Article{	  fujita:90:integrodifferential*1,
+  author	= {Fujita, Yasuhiro},
+  title		= {Integrodifferential equation which interpolates the heat
+		  equation and the wave equation. {II}},
+  journal	= {Osaka J. Math.},
+  fjournal	= {Osaka Journal of Mathematics},
+  volume	= {27},
+  year		= {1990},
+  number	= {4},
+  pages		= {797--804},
+  issn		= {0030-6126},
+  mrclass	= {45K05},
+  mrnumber	= {1088183},
+  mrreviewer	= {Hana Petzeltov\'{a}},
+  url		= {http://projecteuclid.org/euclid.ojm/1200782677}
 }
 
 @Article{	  fujiwara.morimoto:77:lr-theorem,
@@ -92559,23 +92742,6 @@
 }
 
 @Article{	  metzler.klafter:00:random,
-  author	= {Metzler, Ralf and Klafter, Joseph},
-  title		= {The random walk's guide to anomalous diffusion: a
-		  fractional dynamics approach},
-  journal	= {Phys. Rep.},
-  fjournal	= {Physics Reports. A Review Section of Physics Letters},
-  volume	= {339},
-  year		= {2000},
-  number	= {1},
-  pages		= {77},
-  issn		= {0370-1573},
-  mrclass	= {82C31 (82C70)},
-  mrnumber	= {1809268},
-  doi		= {10.1016/S0370-1573(00)00070-3},
-  url		= {https://doi.org/10.1016/S0370-1573(00)00070-3}
-}
-
-@Article{	  metzler.klafter:00:random*1,
   title		= {The random walk's guide to anomalous diffusion: a
 		  fractional dynamics approach},
   journal	= {Physics Reports},
@@ -92590,6 +92756,23 @@
   keywords	= {Anomalous diffusion, Fractional diffusion equation,
 		  Fractional Fokker–Planck equation, Anomalous relaxation,
 		  Mittag–Leffler relaxation, Dynamics in complex systems}
+}
+
+@Article{	  metzler.klafter:00:random*1,
+  author	= {Metzler, Ralf and Klafter, Joseph},
+  title		= {The random walk's guide to anomalous diffusion: a
+		  fractional dynamics approach},
+  journal	= {Phys. Rep.},
+  fjournal	= {Physics Reports. A Review Section of Physics Letters},
+  volume	= {339},
+  year		= {2000},
+  number	= {1},
+  pages		= {77},
+  issn		= {0370-1573},
+  mrclass	= {82C31 (82C70)},
+  mrnumber	= {1809268},
+  doi		= {10.1016/S0370-1573(00)00070-3},
+  url		= {https://doi.org/10.1016/S0370-1573(00)00070-3}
 }
 
 @Article{	  metzler.klafter:04:restaurant,
@@ -104660,7 +104843,22 @@
   mrreviewer	= {Anton Wakolbinger}
 }
 
-@Article{	  perkins:82:local,
+@InCollection{	  perkins:82:local,
+  author	= {Perkins, Edwin},
+  title		= {Local time and pathwise uniqueness for stochastic
+		  differential equations},
+  booktitle	= {Seminar on {P}robability, {XVI}},
+  series	= {Lecture Notes in Math.},
+  volume	= {920},
+  pages		= {201--208},
+  publisher	= {Springer, Berlin-New York},
+  year		= {1982},
+  mrclass	= {60H10},
+  mrnumber	= {658680},
+  mrreviewer	= {Toshio Yamada}
+}
+
+@Article{	  perkins:82:local*1,
   author	= {Perkins, Edwin},
   title		= {Local time is a semimartingale},
   journal	= {Z. Wahrsch. Verw. Gebiete},
@@ -104676,21 +104874,6 @@
   mrreviewer	= {E. \c{C}inlar},
   doi		= {10.1007/BF01957098},
   url		= {https://doi.org/10.1007/BF01957098}
-}
-
-@InCollection{	  perkins:82:local*1,
-  author	= {Perkins, Edwin},
-  title		= {Local time and pathwise uniqueness for stochastic
-		  differential equations},
-  booktitle	= {Seminar on {P}robability, {XVI}},
-  series	= {Lecture Notes in Math.},
-  volume	= {920},
-  pages		= {201--208},
-  publisher	= {Springer, Berlin-New York},
-  year		= {1982},
-  mrclass	= {60H10},
-  mrnumber	= {658680},
-  mrreviewer	= {Toshio Yamada}
 }
 
 @Article{	  perrin:09:mouvement,
@@ -106816,24 +106999,6 @@
 
 @Article{	  pskhu:03:solution,
   author	= {Pskhu, A. V.},
-  title		= {Solution of the first boundary value problem for a
-		  diffusion equation of fractional order},
-  journal	= {Differ. Uravn.},
-  fjournal	= {Differentsial{\cprime}nye Uravneniya},
-  volume	= {39},
-  year		= {2003},
-  number	= {9},
-  pages		= {1286--1289, 1296},
-  issn		= {0374-0641},
-  mrclass	= {26A33 (35G15)},
-  mrnumber	= {1955067},
-  mrreviewer	= {Paulius Mi\v{s}kinis},
-  doi		= {10.1023/B:DIEQ.0000012703.45373.aa},
-  url		= {https://doi.org/10.1023/B:DIEQ.0000012703.45373.aa}
-}
-
-@Article{	  pskhu:03:solution*1,
-  author	= {Pskhu, A. V.},
   title		= {Solution of boundary value problems for a diffusion
 		  equation of fractional order by the {G}reen's function
 		  method},
@@ -106849,6 +107014,24 @@
   mrreviewer	= {Paulius Mi\v{s}kinis},
   doi		= {10.1023/B:DIEQ.0000017925.68789.e9},
   url		= {https://doi.org/10.1023/B:DIEQ.0000017925.68789.e9}
+}
+
+@Article{	  pskhu:03:solution*1,
+  author	= {Pskhu, A. V.},
+  title		= {Solution of the first boundary value problem for a
+		  diffusion equation of fractional order},
+  journal	= {Differ. Uravn.},
+  fjournal	= {Differentsial{\cprime}nye Uravneniya},
+  volume	= {39},
+  year		= {2003},
+  number	= {9},
+  pages		= {1286--1289, 1296},
+  issn		= {0374-0641},
+  mrclass	= {26A33 (35G15)},
+  mrnumber	= {1955067},
+  mrreviewer	= {Paulius Mi\v{s}kinis},
+  doi		= {10.1023/B:DIEQ.0000012703.45373.aa},
+  url		= {https://doi.org/10.1023/B:DIEQ.0000012703.45373.aa}
 }
 
 @Book{		  pskhu:05:uravneniya-v-chastnykh-proizvodnykh-drobnogo-poryadka,
@@ -113056,24 +113239,6 @@
 
 @Article{	  seppalainen:93:large,
   author	= {Sepp\"{a}l\"{a}inen, Timo},
-  title		= {Large deviations for lattice systems. {II}.
-		  {N}onstationary independent fields},
-  journal	= {Probab. Theory Related Fields},
-  fjournal	= {Probability Theory and Related Fields},
-  volume	= {97},
-  year		= {1993},
-  number	= {1-2},
-  pages		= {103--112},
-  issn		= {0178-8051},
-  mrclass	= {60F10 (60G60)},
-  mrnumber	= {1240718},
-  mrreviewer	= {Francis Comets},
-  doi		= {10.1007/BF01199314},
-  url		= {https://doi.org/10.1007/BF01199314}
-}
-
-@Article{	  seppalainen:93:large*1,
-  author	= {Sepp\"{a}l\"{a}inen, Timo},
   title		= {Large deviations for lattice systems. {I}. {P}arametrized
 		  independent fields},
   journal	= {Probab. Theory Related Fields},
@@ -113088,6 +113253,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/BF01192135},
   url		= {https://doi.org/10.1007/BF01192135}
+}
+
+@Article{	  seppalainen:93:large*1,
+  author	= {Sepp\"{a}l\"{a}inen, Timo},
+  title		= {Large deviations for lattice systems. {II}.
+		  {N}onstationary independent fields},
+  journal	= {Probab. Theory Related Fields},
+  fjournal	= {Probability Theory and Related Fields},
+  volume	= {97},
+  year		= {1993},
+  number	= {1-2},
+  pages		= {103--112},
+  issn		= {0178-8051},
+  mrclass	= {60F10 (60G60)},
+  mrnumber	= {1240718},
+  mrreviewer	= {Francis Comets},
+  doi		= {10.1007/BF01199314},
+  url		= {https://doi.org/10.1007/BF01199314}
 }
 
 @Article{	  seppalainen:94:large,
@@ -114594,6 +114777,24 @@
 @Article{	  shen:99:travelling,
   author	= {Shen, Wenxian},
   title		= {Travelling waves in time almost periodic structures
+		  governed by bistable nonlinearities. {II}. {E}xistence},
+  journal	= {J. Differential Equations},
+  fjournal	= {Journal of Differential Equations},
+  volume	= {159},
+  year		= {1999},
+  number	= {1},
+  pages		= {55--101},
+  issn		= {0022-0396,1090-2732},
+  mrclass	= {35K55 (35A05 35B15 35K15 37L15)},
+  mrnumber	= {1726919},
+  mrreviewer	= {Weiqing\ Xie},
+  doi		= {10.1006/jdeq.1999.3652},
+  url		= {https://doi.org/10.1006/jdeq.1999.3652}
+}
+
+@Article{	  shen:99:travelling*1,
+  author	= {Shen, Wenxian},
+  title		= {Travelling waves in time almost periodic structures
 		  governed by bistable nonlinearities. {I}. {S}tability and
 		  uniqueness},
   journal	= {J. Differential Equations},
@@ -114608,24 +114809,6 @@
   mrreviewer	= {Weiqing\ Xie},
   doi		= {10.1006/jdeq.1999.3651},
   url		= {https://doi.org/10.1006/jdeq.1999.3651}
-}
-
-@Article{	  shen:99:travelling*1,
-  author	= {Shen, Wenxian},
-  title		= {Travelling waves in time almost periodic structures
-		  governed by bistable nonlinearities. {II}. {E}xistence},
-  journal	= {J. Differential Equations},
-  fjournal	= {Journal of Differential Equations},
-  volume	= {159},
-  year		= {1999},
-  number	= {1},
-  pages		= {55--101},
-  issn		= {0022-0396,1090-2732},
-  mrclass	= {35K55 (35A05 35B15 35K15 37L15)},
-  mrnumber	= {1726919},
-  mrreviewer	= {Weiqing\ Xie},
-  doi		= {10.1006/jdeq.1999.3652},
-  url		= {https://doi.org/10.1006/jdeq.1999.3652}
 }
 
 @Article{	  shepp.zeitouni:92:note,
@@ -114929,25 +115112,6 @@
 @Article{	  shirai.takahashi:03:random,
   author	= {Shirai, Tomoyuki and Takahashi, Yoichiro},
   title		= {Random point fields associated with certain {F}redholm
-		  determinants. {II}. {F}ermion shifts and their ergodic and
-		  {G}ibbs properties},
-  journal	= {Ann. Probab.},
-  fjournal	= {The Annals of Probability},
-  volume	= {31},
-  year		= {2003},
-  number	= {3},
-  pages		= {1533--1564},
-  issn		= {0091-1798},
-  mrclass	= {60G60 (28D20 60G55 82B05 82B10)},
-  mrnumber	= {1989442},
-  mrreviewer	= {Martin Jacobsen},
-  doi		= {10.1214/aop/1055425789},
-  url		= {https://doi.org/10.1214/aop/1055425789}
-}
-
-@Article{	  shirai.takahashi:03:random*1,
-  author	= {Shirai, Tomoyuki and Takahashi, Yoichiro},
-  title		= {Random point fields associated with certain {F}redholm
 		  determinants. {I}. {F}ermion, {P}oisson and boson point
 		  processes},
   journal	= {J. Funct. Anal.},
@@ -114962,6 +115126,25 @@
   mrreviewer	= {Oleksiy Khorunzhiy},
   doi		= {10.1016/S0022-1236(03)00171-X},
   url		= {https://doi.org/10.1016/S0022-1236(03)00171-X}
+}
+
+@Article{	  shirai.takahashi:03:random*1,
+  author	= {Shirai, Tomoyuki and Takahashi, Yoichiro},
+  title		= {Random point fields associated with certain {F}redholm
+		  determinants. {II}. {F}ermion shifts and their ergodic and
+		  {G}ibbs properties},
+  journal	= {Ann. Probab.},
+  fjournal	= {The Annals of Probability},
+  volume	= {31},
+  year		= {2003},
+  number	= {3},
+  pages		= {1533--1564},
+  issn		= {0091-1798},
+  mrclass	= {60G60 (28D20 60G55 82B05 82B10)},
+  mrnumber	= {1989442},
+  mrreviewer	= {Martin Jacobsen},
+  doi		= {10.1214/aop/1055425789},
+  url		= {https://doi.org/10.1214/aop/1055425789}
 }
 
 @Article{	  shogenov.kumykova.ea:97:generalized,
@@ -118709,24 +118892,6 @@
 
 @Book{		  talagrand:11:mean,
   author	= {Talagrand, Michel},
-  title		= {Mean field models for spin glasses. {V}olume {II}},
-  series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
-		  Folge. A Series of Modern Surveys in Mathematics [Results
-		  in Mathematics and Related Areas. 3rd Series. A Series of
-		  Modern Surveys in Mathematics]},
-  volume	= {55},
-  note		= {Advanced replica-symmetry and low temperature},
-  publisher	= {Springer, Heidelberg},
-  year		= {2011},
-  pages		= {xii+629},
-  isbn		= {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass	= {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber	= {3024566},
-  mrreviewer	= {Francis Comets}
-}
-
-@Book{		  talagrand:11:mean*1,
-  author	= {Talagrand, Michel},
   title		= {Mean field models for spin glasses. {V}olume {I}},
   series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
 		  Folge. A Series of Modern Surveys in Mathematics [Results
@@ -118743,6 +118908,24 @@
   mrreviewer	= {Francis Comets},
   doi		= {10.1007/978-3-642-15202-3},
   url		= {https://doi.org/10.1007/978-3-642-15202-3}
+}
+
+@Book{		  talagrand:11:mean*1,
+  author	= {Talagrand, Michel},
+  title		= {Mean field models for spin glasses. {V}olume {II}},
+  series	= {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3.
+		  Folge. A Series of Modern Surveys in Mathematics [Results
+		  in Mathematics and Related Areas. 3rd Series. A Series of
+		  Modern Surveys in Mathematics]},
+  volume	= {55},
+  note		= {Advanced replica-symmetry and low temperature},
+  publisher	= {Springer, Heidelberg},
+  year		= {2011},
+  pages		= {xii+629},
+  isbn		= {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass	= {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber	= {3024566},
+  mrreviewer	= {Francis Comets}
 }
 
 @Article{	  talagrand:94:sharper,
@@ -120858,23 +121041,6 @@
 
 @Article{	  tracy.widom:16:on,
   author	= {Tracy, Craig A. and Widom, Harold},
-  title		= {On the ground state energy of the {$\delta$}-function
-		  {B}ose gas},
-  journal	= {J. Phys. A},
-  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
-  volume	= {49},
-  year		= {2016},
-  number	= {29},
-  pages		= {294001, 17},
-  issn		= {1751-8113},
-  mrclass	= {82D05},
-  mrnumber	= {3512121},
-  doi		= {10.1088/1751-8113/49/29/294001},
-  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
-}
-
-@Article{	  tracy.widom:16:on*1,
-  author	= {Tracy, Craig A. and Widom, Harold},
   title		= {On the ground state energy of the delta-function {F}ermi
 		  gas},
   journal	= {J. Math. Phys.},
@@ -120889,6 +121055,23 @@
   mrreviewer	= {Reinhard Redlinger},
   doi		= {10.1063/1.4964252},
   url		= {https://doi.org/10.1063/1.4964252}
+}
+
+@Article{	  tracy.widom:16:on*1,
+  author	= {Tracy, Craig A. and Widom, Harold},
+  title		= {On the ground state energy of the {$\delta$}-function
+		  {B}ose gas},
+  journal	= {J. Phys. A},
+  fjournal	= {Journal of Physics. A. Mathematical and Theoretical},
+  volume	= {49},
+  year		= {2016},
+  number	= {29},
+  pages		= {294001, 17},
+  issn		= {1751-8113},
+  mrclass	= {82D05},
+  mrnumber	= {3512121},
+  doi		= {10.1088/1751-8113/49/29/294001},
+  url		= {https://doi.org/10.1088/1751-8113/49/29/294001}
 }
 
 @Article{	  tracy.widom:17:blocks,
