--- a/Build_docs/bib_files/bourgain:02:on*4.bib
+++ b/Build_docs/bib_files/bourgain:02:on*4.bib
@@ -1,16 +1,16 @@
-@incollection{bourgain:02:on*4,
-  author        = {Bourgain, J.},
-  doi           = {10.1007/BF02786578},
-  fjournal      = {Journal d'Analyse Math\'{e}matique},
-  issn          = {0021-7670,1565-8538},
-  journal       = {J. Anal. Math.},
-  mrclass       = {47B39 (47A10 47N55 81Q10 82B44)},
-  mrnumber      = {1984594},
-  mrreviewer    = {David\ Damanik},
-  note          = {Dedicated to the memory of Tom Wolff},
-  pages         = {221--254},
-  title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential. {II}},
-  url           = {https://doi.org/10.1007/BF02786578},
-  volume        = {88},
+@article{bourgain:02:on*4,
+  author        = {Bourgain, Jean},
+  doi           = {10.1073/pnas.222494399},
+  fjournal      = {Proceedings of the National Academy of Sciences of the United States of America},
+  issn          = {0027-8424,1091-6490},
+  journal       = {Proc. Natl. Acad. Sci. USA},
+  mrclass       = {35Q55 (35G25)},
+  mrnumber      = {1946761},
+  mrreviewer    = {Victor\ V.\ Zharinov},
+  number        = {24},
+  pages         = {15262--15268},
+  title         = {On the global {C}auchy problem for the nonlinear {S}chr\"{o}dinger equation},
+  url           = {https://doi.org/10.1073/pnas.222494399},
+  volume        = {99},
   year          = {2002}
 }
