Add some references from my paper with Jingyu and Wenxuan

--- a/Build_docs/bib_files/li.liang.ea:16:diffusive*1.bib
+++ b/Build_docs/bib_files/li.liang.ea:16:diffusive*1.bib
@@ -1,16 +1,16 @@
 @article{li.liang.ea:16:diffusive*1,
   author        = {Li, Fang and Liang, Xing and Shen, Wenxian},
-  doi           = {10.3934/dcds.2016.36.3317},
-  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
-  issn          = {1078-0947,1553-5231},
-  journal       = {Discrete Contin. Dyn. Syst.},
-  mrclass       = {35K57 (35B15 35K20 35R35 92D25)},
-  mrnumber      = {3485439},
+  doi           = {10.1016/j.jde.2016.04.035},
+  fjournal      = {Journal of Differential Equations},
+  issn          = {0022-0396,1090-2732},
+  journal       = {J. Differential Equations},
+  mrclass       = {35R35 (35B15 35K57 35K91 37L30 92B05)},
+  mrnumber      = {3505195},
   mrreviewer    = {Alp\'{a}r\ R.\ M\'{e}sz\'{a}ros},
-  number        = {6},
-  pages         = {3317--3338},
-  title         = {Diffusive {KPP} equations with free boundaries in time almost periodic environments: {I}. {S}preading and vanishing dichotomy},
-  url           = {https://doi.org/10.3934/dcds.2016.36.3317},
-  volume        = {36},
+  number        = {4},
+  pages         = {2403--2445},
+  title         = {Diffusive {KPP} equations with free boundaries in time almost periodic environments: {II}. {S}preading speeds and semi-wave solutions},
+  url           = {https://doi.org/10.1016/j.jde.2016.04.035},
+  volume        = {261},
   year          = {2016}
 }
